# cloud-custodian

./: .azure-pipelines.yml  .codecov.yml  .gitignore  ADOPTERS.md  Makefile  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.env  tox.ini
.devcontainer/: devcontainer.json  prep_container.sh
c7n/: cache.py  cli.py  commands.py  data.py  element.py  handler.py  loader.py  manager.py  mu.py  output.py  policy.py  query.py  resolver.py  schema.py  structure.py  tags.py  testing.py  utils.py  version.py
docker/: cli  cli-distroless  mailer  mailer-distroless  org  org-distroless  policystream  policystream-distroless
docs/: .buildinfo  Makefile.sphinx  actions.html  contribute.html  deployment.html  filters.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
events/: index.html
tests/: common.py  conftest.py  test_account.py  test_airflow.py  test_ami.py  test_apigw.py  test_appelb.py  test_asg.py  test_aws.py  test_cli.py  test_cloudtrail.py  test_code.py  test_config.py  test_cwa.py  test_cwe.py  test_cwi.py  test_cwl.py  test_doc_examples.py  test_docker.py  test_ebs.py  test_ec2.py  test_ecr.py  test_ecs.py  test_efs.py  test_eks.py  test_elasticache.py  test_elasticsearch.py  test_emr.py  test_filters.py  test_fsx.py  test_glue.py  test_hsm.py  test_iam.py  test_kafka.py  test_kinesis.py  (+29 more)
tools/c7n_azure/: pyproject.toml  requirements.txt  setup.py
tools/c7n_azure/c7n_azure/: __init__.py  azure_events.py  constants.py  filters.py  function_package.py  handler.py  policy.py  provider.py  query.py  session.py  storage_utils.py  tags.py  utils.py
tools/c7n_azure/c7n_azure/actions/: delete.py  logic_app.py  tagging.py
tools/c7n_azure/c7n_azure/container_host/: host.py
tools/c7n_azure/c7n_azure/provisioning/: function_app.py
tools/c7n_azure/c7n_azure/resources/: access_control.py  advisor.py  arm.py  cosmos_db.py  defender.py  front_door.py  generic_arm_resource.py  key_vault.py  key_vault_certificate.py  key_vault_keys.py  key_vault_storage.py  network_interface.py  network_security_group.py  postgresql_server.py  resource_map.py  sqldatabase.py  sqlserver.py  storage.py  storage_container.py  vm.py  web_app.py
tools/c7n_azure/tests_azure/: azure_common.py  test_azure_utils.py  test_diagnostic_settings.py  test_functional_actions_tags.py  test_logic_app.py  test_session.py  test_storage_firewall_actions.py  test_storageutils.py  tools_tags.py
tools/c7n_azure/tests_azure/cassettes/: CosmosDBFirewallActionTest.test_set_ip_range_filter_append.json  CosmosDBFirewallActionTest.test_set_ip_range_filter_remove_bypass.json  CosmosDBFirewallActionTest.test_set_ip_range_filter_replace.json  CosmosDBFirewallActionTest.test_set_ip_range_filter_replace_bypass.json  CosmosDBFirewallActionTest.test_set_vnet_append.json  KeyVaultCertificatesTest.test_key_vault_certificates_keyvault.json  KeyVaultKeyTest.test_key_vault_keys_keyvault.json  KeyVaultKeyTest.test_key_vault_keys_type.json  ParentFilterFunctionalTest.keyvault-keys.json
tools/c7n_azure/tests_azure/templates/: mysql.json  provision.sh  sqlserver.json
tools/c7n_azure/tests_azure/tests_resources/: test_advisor.py  test_container_host.py  test_cosmos_db.py  test_event_subscriptions.py  test_frontdoor.py  test_networksecuritygroup.py  test_postgresql_server.py  test_sqldatabase.py  test_sqlserver.py  test_storage.py  test_storage_container.py  test_vm.py
tools/c7n_gcp/: pyproject.toml  requirements.txt  setup.py
tools/c7n_gcp/c7n_gcp/: client.py  mu.py  policy.py  query.py
tools/c7n_gcp/c7n_gcp/actions/: labels.py
tools/c7n_gcp/c7n_gcp/filters/: __init__.py  iampolicy.py  metrics.py  sccfindings.py
tools/c7n_gcp/c7n_gcp/resources/: appengine.py  bigquery.py  compute.py  dataflow.py  dns.py  function.py  gke.py  iam.py  kms.py  loadbalancer.py  network.py  pubsub.py  resource_map.py  resourcemanager.py  service.py  spanner.py  sql.py  storage.py
tools/c7n_gcp/tests/: test_api_disabled.py  test_bigquery.py  test_compute.py  test_cscc.py  test_dataflow.py  test_deploymentmanager.py  test_dns.py  test_filters.py  test_gcp_iam.py  test_gcp_storage.py  test_gke.py  test_inventory.py  test_kms.py  test_loadbalancer.py  test_mu_gcp.py  test_network.py  test_notify_gcp.py  test_query.py  test_resourcemanager.py  test_service.py  test_spanner.py  test_sql.py
tools/c7n_gcp/tests/data/flights/bq-table-delete/: delete-bigquery-v2-projects-cloud-custodian-datasets-custodian_test-tables-test-table-1_1.json  get-bigquery-v2-projects-cloud-custodian-datasets-custodian_test-tables_1.json  get-bigquery-v2-projects-cloud-custodian-datasets-custodian_test_1.json  get-bigquery-v2-projects-cloud-custodian-datasets_1.json
tools/c7n_gcp/tests/data/flights/discovery/: get-discovery-v1-apis-securitycenter-v1-rest_1.json.bz2
tools/c7n_gcp/tests/data/flights/dns-managed-zone-delete/: get-dns-v1beta2-projects-custodian-managedZones_1.json  get-dns-v1beta2-projects-custodian-managedZones_2.json
tools/c7n_gcp/tests/data/flights/gke-cluster-delete/: get-v1-projects-custodian-locations---clusters_1.json  get-v1-projects-custodian-locations-us-east1-b-clusters_1.json
tools/c7n_mailer/: pyproject.toml  requirements.txt  setup.py
tools/c7n_mailer/c7n_mailer/: cli.py  deploy.py  ldap_lookup.py  slack_delivery.py  utils.py  utils_email.py
tools/c7n_mailer/c7n_mailer/azure_mailer/: deploy.py  handle.py  utils.py
tools/c7n_mailer/tests/: test_azure.py  test_email.py  test_misc.py  test_utils.py
tools/c7n_openstack/: pyproject.toml  requirements.txt  setup.py
tools/c7n_openstack/c7n_openstack/: query.py
tools/c7n_openstack/c7n_openstack/resources/: server.py
tools/c7n_sphinxext/: pyproject.toml  requirements.txt  setup.py
tools/c7n_sphinxext/c7n_sphinxext/: docgen.py
tools/c7n_terraform/: pyproject.toml  requirements.txt  setup.py
tools/c7n_terraform/tests_terraform/: conftest.py
tools/c7n_terraform/tests_terraform/data/aws-complete/: provider.tf  s3.tf  vars.tf
tools/c7n_terraform/tests_terraform/data/aws-s3-bucket/: s3.tf  vars.tf
(+1192 files in other folders)
