[tool.poetry]
name = "c7n_azure"
version = "0.7.11"
description = "Cloud Custodian - Azure Support"
readme = "readme.md"
homepage="https://cloudcustodian.io"
repository="https://github.com/cloud-custodian/cloud-custodian"
documentation="https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers=[
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.6"

azure-mgmt-authorization = "^1.0.0"
azure-mgmt-apimanagement = "^1.0.0"
azure-mgmt-applicationinsights = "^1.0.0"
azure-mgmt-batch = "^15.0.0"
azure-mgmt-cognitiveservices = "^11.0.0"
azure-mgmt-cosmosdb = "^6.1.0"
azure-mgmt-costmanagement = "^1.0.0"
azure-mgmt-containerinstance = "^7.0.0"
azure-mgmt-compute = "^19.0.0"
azure-mgmt-cdn = "^10.0.0"
azure-mgmt-containerregistry = {version = "8.0.0b1", allow-prereleases = true}
azure-mgmt-containerservice = "^15.0.0"
azure-mgmt-databricks = "1.0.0b1"
azure-mgmt-datalake-store = "^1.0.0"
azure-mgmt-datafactory = "^1.0.0"
azure-mgmt-dns = "8.0.0b1"
azure-mgmt-eventgrid = "^8.0.0"
azure-mgmt-eventhub = "^8.0.0"
azure-mgmt-hdinsight = "^7.0.0"
azure-mgmt-iothub = "^1.0.0"
azure-mgmt-keyvault = "^8.0.0"
azure-mgmt-managementgroups = "1.0.0b1"
azure-mgmt-network = "^17.1.0"
azure-mgmt-resourcegraph = "^7.0.0"
azure-mgmt-resource = "^16.0.0"
azure-mgmt-rdbms = "^8.0.0"
azure-mgmt-search = "^8.0.0"
azure-mgmt-sql = "^1.0.0"
azure-mgmt-storage = "^17.0.0"
azure-mgmt-subscription = "^1.0.0"
azure-mgmt-web = "^2.0.0"
azure-mgmt-logic = "^9.0.0"
azure-storage-blob = "^12.8.0"
azure-storage-queue = "^12.1.5"
azure-cosmosdb-table = "^1.0.6"
applicationinsights = "^0.11.9"
apscheduler = "^3.6.3"
distlib = "^0.3.0"
jsonpickle = "1.3"
requests = "^2.22.0"
PyJWT = "^1.7.1"
adal = "^1.2.6"


azure-functions = { version = "^1.0.8", python = "~3" }
azure-graphrbac = "^0.61.1"
netaddr = "^0.7.19"
azure-storage-file = "^2.1.0"
azure-mgmt-policyinsights = "^1.0.0"
azure-mgmt-monitor = "^2.0.0"
click = "^7.0"
azure-cosmos = "^3.1.2"
azure-mgmt-redis = "^12.0.0"
azure-keyvault-secrets = "^4.2.0"
azure-keyvault-keys = "^4.3.1"
azure-keyvault-certificates = "^4.2.1"
azure-identity = "^1.5.0"
azure-keyvault = "^4.1.0"
azure-storage-file-share = "^12.4.1"
cryptography = "^3.4.6"
azure-mgmt-msi = "^1.0.0"
jmespath = "^0.10.0"

[tool.poetry.dev-dependencies]
# setup custodian as a dev dependency
c7n = {path = "../..", develop = true}
vcrpy-unittest = "^0.1.7"
parameterized = "^0.7.1"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
