[tool.poetry]
name = "c7n_gcp"
version = "0.4.14"
description = "Cloud Custodian - Google Cloud Provider"
readme = "readme.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers = [
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.7"
retrying = "^1.3.3"
google-api-python-client = "^2.0"
google-cloud-logging = "^2.6"
google-auth = "^2.1.0"
ratelimiter = "^1.2.0"
google-cloud-monitoring = "^2.5.0"
google-cloud-storage = "^1.42.2"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-terraform = "^0.6.0"
c7n = {path = "../..", develop = true}

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
