[tool.poetry]
name = "c7n_mailer"
version = "0.6.14"
description = "Cloud Custodian - Reference Mailer"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"
classifiers = [
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.scripts]
c7n-mailer = 'c7n_mailer.cli:main'
c7n-mailer-replay = 'c7n_mailer.replay:main'

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.0"
boto3 = ">=1.11.12"
jsonschema = ">=3.2.0"
python-dateutil = "^2.8.1"
pyyaml = ">=5.4.0"
sendgrid = "^6.1.1"
datadog = "^0.34.0"
ldap3 = "^2.6.1"
redis = "^3.4.1"
jsonpointer = "^2.0"
jsonpatch = "^1.25"
importlib-metadata = ">=4.11.1"

[tool.poetry.dev-dependencies]
fakeredis = "^1.2.0"
pytest = "^6.0.0"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
