[tool.poetry]
name = "c7n_sphinxext"
version = "1.1.13"
description = "Cloud Custodian - Sphinx Extensions"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
homepage = "https://cloudcustodian.io"
documentation = "https://cloudcustodian.io/docs"
repository = "https://github.com/cloud-custodian/cloud-custodian"
classifiers=[
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]
readme = "README.md"

[tool.poetry.scripts]
c7n-sphinxext = 'c7n_sphinxext.docgen:main'

[tool.poetry.dependencies]
python = "^3.6"
Sphinx = "^4.2.0"
Pygments = "^2.10.0"
sphinx-rtd-theme = "^1.0.0"
recommonmark = "^0.6.0"
sphinx_markdown_tables = "^0.0.12"
myst-parser = "^0.15.2"
click = "^8.0"
typing-extensions = "^3.7.4"
docutils = ">=0.14,<0.18"

[tool.poetry.dev-dependencies]
c7n = {path = "../..", develop = true}

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
