[tool.poetry]
name = "c7n_terraform"
version = "0.1.5"
readme = "readme.md"
description = "Cloud Custodian Provider for evaluating Terraform"
repository = "https://github.com/cloud-custodian/cloud-custodian"
homepage = "https://cloudcustodian.io"
documentation = "https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers = [
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"
python-hcl2 = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
c7n = {path = "../..", develop = true}

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
